infrastructure/terraform/security_groups.tf
resource "aws_security_group" "secure" {
name        = "secure"
description = "Allow TLS inbound traffic"
vpc_id      = "vpc-66265c1b"

ingress {
description = "SSH"
from_port   = 22
to_port     = 22
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

ingress {
description = "HTTP"
from_port   = 80
to_port     = 80
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

ingress {
description = "Service"
from_port   = 30001
to_port     = 30001
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

ingress {
description = "Database"
from_port   = 3306
to_port     = 3306
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

egress {
from_port   = 0
to_port     = 0
protocol    = "-1"
cidr_blocks = ["0.0.0.0/0"]
}

tags = {
Name = "wordpress"
}
}

resource "aws_security_group" "rdssecure" {
name        = "rds-secure"
description = "Allow TLS inbound traffic"
vpc_id      = "vpc-66265c1b"

ingress {
description = "Database"
from_port   = 3306
to_port     = 3306
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

egress {
from_port   = 0
to_port     = 0
protocol    = "-1"
cidr_blocks = ["0.0.0.0/0"]
}

tags = {
Name = "rds"
}
}
